skin/frontend/default/default/css/boxes.css
/* ... */
.product-collateral .up-sell .generic-product-grid td img { border:1px solid #E5DCC3; }
.product-collateral .up-sell .generic-product-grid .product-image { text-align:center; }
.product-collateral .up-sell .generic-product-grid td.empty-product { background:#f1ecdb; }
#customer-reviews { margin-bottom:15px; }
#customer-reviews li { margin-bottom:25px; }
#customer-reviews li p { clear:both; }
.product-collateral .add-tag-box .input-box { float:left; width:302px; margin-right:8px; }
.product-collateral .add-tag-box .input-box .input-text { width:300px;  }
.tags-list { margin-bottom:15px; }
.tags-list li {
    display:inline;
    background:url(../images/separator.gif) no-repeat 100% .4em;
    padding:0 8px 0 4px;
    }
.tags-list li.first { padding-left:0; }
.tags-list li.last { background:none; }
.add-tag-box { background:url(../images/icon_tag_add.gif) no-repeat 0 2px; padding-left:23px; }
.product-review-box { width:auto; margin:8px 0 13px 0; }
.product-review-box td, .product-review-box th { text-align:center; }
.product-review-box td.label {width:100px; text-align:left; }

/* Product Detail sidebar */
.mini-related-items .head h4 { background-image:url(../images/icon_clip.gif); }
.mini-related-items .product-images { width:70px; }
.mini-related-items .product-images input { float:left; margin-right:4px;  }
.mini-related-items .product-details { margin-left:78px; }
.mini-related-items ol li { padding-left:0 ; padding-right:0; }
.mini-related-items .super-products .product-images { width:52px;}
.mini-related-items .super-products .product-details { width:70px;}

/********************** Checkout */

.shipment-methods dd { margin-bottom:13px; }
.payment-methods dt { margin-bottom:5px; }
.payment-methods dd { padding:5px 20px; }


/* Shopping Cart */
.shopping-cart  { margin-bottom:0; }
.shopping-cart th, .shopping-cart td { padding-left:13px; padding-right:13px; }
.shopping-cart tr.error { background:#FDE6E0 !important; }
.shopping-cart .continue-shopping { float: left; }
.shopping-cart-item-message {margin-bottom:5px}
td.attributes-col { line-height:1.4em; }
td.attributes-col ul { margin:5px 0; font-size:.95em;}
td.attributes-col dt {
    margin-top:.5em;
    font-size:.95em;
    font-weight:bold;
    }
td.attributes-col dd ul { margin: 0 0 5px 0; }
td.attributes-col dd ul li { margin-left:15px; list-style:disc; }

.shopping-cart-totals {
    width:248px;
    float:right;
    margin-top:25px;
    border:1px solid #BEBCB7;
    background:#DEE5E8;
    text-align:right;
    }
.shopping-cart-totals table { width:100%; margin-top:7px; }
.shopping-cart-totals td { padding:0 15px; }
.shopping-cart-totals tr.last td { padding-bottom:5px; }
.shopping-cart-totals tfoot td {
    font-size:1.3em;
    }
.shopping-cart-totals .checkout-types { margin:15px; }
.shopping-cart-totals .checkout-types li { clear:both;  margin:10px 0; }
.shopping-cart-collaterals {
    float:left;
    width:605px;
    padding:25px 0;
    }
.shopping-cart-collaterals .box {
    margin-bottom:18px;
    padding:12px 15px;
    border:1px solid #D0CBC1;
    background:url(../images/base_mini_head_bg.gif) repeat-x #fff;
    }
.shopping-cart-collaterals .box .form-button  {  margin-left:5px; }
.shopping-cart-collaterals .discount-codes h4, .shopping-cart-collaterals .shipping-estimate h4 {
    min-height:16px;
    color:#e26703;
    background-repeat:no-repeat;
    background-position:0 0;
    padding:1px 0 1px 21px;
    text-transform:uppercase;
    }
.shopping-cart-collaterals .discount-codes h4 { background-image:url(../images/icon_asterick.gif);  padding-left:23px; }
.shopping-cart-collaterals .shipping-estimate h4 { background-image:url(../images/icon_lorry.gif);  padding-left:23px; }
.shopping-cart-collaterals .shipping-estimate .input-text { width:214px; }
.shopping-cart-collaterals .shipping-estimate select { width:220px; }
.shopping-cart-collaterals .upsell {
    width:42.5%;
    border:1px solid #cec3b6;
    padding:12px 15px;
    background:#fafaec;
    }
.shopping-cart-collaterals .upsell .product-image { float:left; width:75px; border:1px solid #d0cdc9; }
.shopping-cart-collaterals .upsell .product-shop { width:170px; }
.shopping-cart-collaterals .upsell .product-shop h5 { font-size:1em; }
.grand_total {
    width:auto;
    margin-top:15px;
    border:1px solid #BEBCB7;
    background:#DEE5E8;
    font-size:1.3em !important;
    font-weight:bold;
    text-align:right;
    }
tr.grand_total td, p.grand_total { padding-top:5px; padding-bottom:5px; }


/* One-Page checkout */
.one-page-checkout .group-select { margin-right:0; }
.one-page-checkout .box {
    border:1px solid #bbb6a5;
    border-top:0;
    padding:15px 20px;
    background:#faf7ee;
    }
.one-page-checkout .head {
    margin-bottom:0 ;
    padding:4px 8px 6px 8px;
    background:url(../images/opc_off_head_bg.gif) repeat-x 0 100% #eee;
    border-width:0 1px 0 1px;
    border-color:#D9DDE3;
    border-style:solid;
    border-top:1px solid #fff;
    }
.one-page-checkout .head a { display:none; }  /* Hide Edit button in step header */
.one-page-checkout h3 { color:#999; font-size:1.05em; }
.one-page-checkout h4 { border-bottom:1px solid #E4E4E4; padding-bottom:2px; text-transform:uppercase; }
.one-page-checkout .step-count { background:#fff; font-size:.9em; padding:0 4px; line-height:1em; }
.one-page-checkout .content { padding: 10px 20px; }
.one-page-checkout label.label { font-size:1.05em; color:#2f2f2f; }
.one-page-checkout .allow .head { background:#d0dce1; border-color:#a3aeb3; border-width:1px 1px 0 1px; cursor:pointer; }
.one-page-checkout .active .head { margin-bottom:0; border:1px solid #BBAFA0; background:#F9F3E3; padding-bottom:5px; cursor:default; }
.one-page-checkout .alloq .head a { display:block; } /* Display Edit button in active selection */
.one-page-checkout .group-select { margin-top:0; border:0; background:none; padding:0; }
.one-page-checkout .allow h3 { color:#a4b3b9; }
.one-page-checkout .active h3 { color:#F18200; }
/* ... */

